--- a/index.html
+++ b/index.html
@@ -24,16 +24,9 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+  <!-- Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Updated: Mar 17 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -121,7 +114,7 @@
               During my software engineering career I've worked with a variety of technologies and languages, with c# and python being the ones I'm most familiar with (and enjoy working with the most!).
               I've built a whole bunch of different projects in that time, from improving our internal scheduler to creating a new system to handle non-code data promotions.
               Even building cross cloud functions to be able to send arbitrary data between our Azure and AWS cloud databases!
-              Delving into our legacy codebase looking for clues to uncover the origin of an obsure or intermittent bug is like second nature and I've yet to find a bug stealthy enough to evade me.
+              Delving into our legacy codebase looking for clues to uncover the origin of an obsure or intermittent bug is second nature and I've yet to find a bug stealthy enough to evade me.
             </p>
           </div>
         </div>
@@ -219,7 +212,7 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Spencer Fisher</h4>
               <p><em>Software Engineer with 7+ years of Professional experience designing and developing production ready code.</em></p>
@@ -392,7 +385,7 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+  <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
 </body>
