--- a/ProjectPics/PrivatePolicy.html
+++ b/ProjectPics/PrivatePolicy.html
@@ -6,7 +6,7 @@
             <span id="myPolicy">
                 <link rel="stylesheet" href="../Style/style.css">
                 <h1 class="text-3xl text-center mt-12">Privacy Policy for Project Pics</h1>
-                <p class="mt-4">At Project Pics, accessible from hoveringgoat.github.io/PrivatePolicy, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Project Pics and how we use it.</p>
+                <p class="mt-4">At Project Pics, accessible from https://hoveringgoat.github.io/ProjectPics/PrivatePolicy, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Project Pics and how we use it.</p>
                 <p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
                 <p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in naa. This policy is not applicable to any information collected offline or via channels other than this website. Our Privacy Policy was created with the help of the Free Privacy Policy Generator.</p>
                 <h2 class="text-2xl mt-8">Information we collect</h2>
