--- a/Calculator/Calc.html
+++ b/Calculator/Calc.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body onload="InitialValues()" class="bg-white">
+<body onload="InitialValues()" class="bg-gray-500">
     <link rel="stylesheet" href="../Style/style.css">
     <script src="../Javascript/calc.js"></script>
     <div>
