--- a/StarTracker/index.html
+++ b/StarTracker/index.html
@@ -19,7 +19,7 @@
             </div>
     </div>
     <div class="footer">
-        <a href="Calculator\Calc"> Mortgage Calculator</a>
+        <a href="..\Calculator\Calc.html"> Mortgage Calculator</a>
     </div>
 </body>
 </html>
