--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <div class="social-links mt-3 text-center">
             <a href="https://github.com/HoveringGoat" class="github"><i class="bx bxl-github"></i></a>
             <a href="https://www.linkedin.com/in/spencer-fisher-00ab52115/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+            <a href="Calculator\Calc.html" class="instagram"><i class="bx bxl-instagram"></i></a>
+            <a href="StarTracker\index.html" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         </div>
       </div>
